tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select a model
  type to search
  Warning: OpenAI base URL is overridden to https://api.kimi.com/coding/v1. Se
  ↑↓ model · ←→ page · / thinking · Enter apply · Esc cancel · Tab/Shift+Tab p

  All  DeepSeek  openai-responses  GLM  [Kimi]


› kimi-k2-thinking           Thinking Kimi model for slower research passes,
                             planning, and hard technical questions
  kimi-k2-thinking-turbo     Kimi reasoning model for long-horizon research,
                             planning, and tool use
  kimi-k2.5 ← current        Earlier Kimi frontier model for long-context
                             agents, coding, and multimodal work
  kimi-k2.6                  Multimodal Kimi workhorse for agent loops, coding
                             tasks, and visual context
  kimi-for-coding            Coding-focused Kimi model, stronger on long-
                             horizon repo work with less overthinking
  kimi-for-coding-highspeed  Lower-latency Kimi Code variant for interactive
                             edits and coding-agent loops
  k3                         Multimodal Kimi model with 1M context and
                             toggleable max-effort thinking for long-horizon
                             agent work

  Thinking  (/ to toggle)   [ Off ] unsupported
