tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 2876
expression: popup
---
  Select Personality
  Choose a communication style for Ody.

  1. Friendly             Warm, collaborative, and helpful.
› 2. Pragmatic ← current  Concise, task-focused, and direct.

  Press enter to confirm or esc to go back
