tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__plan_implementation_popup_no_selected.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: popup
---
  Implement this plan?

  1. Yes, implement this plan          Switch to Default and start coding.
› 2. Yes, clear context and implement  Fresh thread with this plan.
  3. No, stay in Plan mode             Keep Plan mode and continue the
                                       conversation.

  Press enter to confirm or esc to go back
