tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__plugin_detail_popup_installed.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: strip_osc8_for_snapshot(&popup)
---
  Plugins
  Figma · Installed · Ody Marketplace
  Turn Figma files into implementation context.

› 1. Back to plugins   Return to the plugin list.
  2. Uninstall plugin  Remove this plugin now.
     Source            Local
     Auth              Auth on install
     Skills            design-review, extract-copy
     Hooks             PreToolUse (1), Stop (2)
     Apps              Figma, Slack
     MCP Servers       figma-mcp, docs-mcp

  Press esc to close.
